--- a/templates/base.html
+++ b/templates/base.html
@@ -58,6 +58,11 @@
                 ><i class="bi bi-graph-up me-1"></i>可视化大屏</a
               >
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('dashboard.data_table') }}"
+                ><i class="bi bi-table me-1"></i>数据表格</a
+              >
+            </li>
           </ul>
 
           <ul class="navbar-nav">
